# krishvk.github.io

./: .cursorrules  .gitignore  .gitlab-ci.yml  .markdownlint.json  .readthedocs.yaml  README.md  README.rst  docusaurus.config.ts  genindex.html  index.html  me.html  notes.txt  objects.inv  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js  work_profile.html
.cursor/rules/: resume-pdf.mdc
.github/workflows/: deploy.yml
_sources/: index.rst.txt
docs/: .buildinfo  genindex.html  me.html  requirements.txt  work_profile.html
docs/_sources/: me.rst.txt  work_profile.rst.txt
docs/about-me/: education.md  other-hobbies.md  positions-held.md  publications.md  recommendations.md  recommendations.mdx
docs/academic/: log-anomaly-detector.md
docs/personal/: argparse-enh.md  personal-website.md  txtoflow.md
docs/projects-handled/: ai-ml-log-analyzer.md  c-forge.md  co-simulation-environment.md  verification-best-practices.md
docs/source/: conf.py  index.rst  me.rst  work_profile.rst
docs/work/: vbpt.md  verification-tracks.md
html/: elements.html  generic.html  index.html
resume/: generate-html-from-react.js  generate-pdf-from-html.js  generate-pdf.js  generate-resume-in-build.js
scripts/: README.md  generate-all.js  generate-resume-local.js  generate-skills-data.js  generate-skillset.py  pre-commit-hook.sh  setup-git-hooks.sh  skillset-categories.yaml  sync-categories.py  watch-all.js
src/clientModules/: devTheme.ts  materialIcons.ts  siteAppearanceInit.ts
src/components/: BooksList.module.css  (+12 more)
static/: books-library.csv
(+58 files in other folders)
