[tool.poetry]
name = "krishvk.gitlab.io"
version = "0.1.0"
description = ""
authors = ["Krishna <krishna.vijay4444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sphinx-tabs = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
